<resources>
    <string name="app_name">BuyAll</string>
    <string name="app_name">Buy All</string>
    <string name="track_order">Track Order</string>
    <string name="cancel">Cancel</string>
    <string name="order_time">Order Time</string>
    <string name="order_number">Order Number</string>
    <string name="_30_minutes">2 days ago</string>
    <string name="order_number_value">#8386</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="we_are_preparing_your_order">We are preparing your order</string>
    <string name="ready_to_delivery">Ready to Delivery</string>
    <string name="your_order_is_ready_for_delivery">Your order is ready for delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>